# R_Itulin_Maxim_

./: CMakeProject1.cpp  Lesson_2.R  lesson_1.R  lesson_2.R  lesson_3.R  lesson_4.R  lesson_5.R  lesson_6.R
CMake3/: CMakeLists.txt  CMakeProject3.cpp  CMakeProject3.h  fooList.txt
Cmake2/: CMakeLists2.txt  CMakeProject2.cpp  Foo.cpp
New Unity Project (2)/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  New Unity Project (2).sln  VuforiaEditorScripts.csproj  VuforiaScripts.csproj  VuforiaVersionCheckerScripts.csproj
New Unity Project (2)/Assets/: alfa.cs  alfa2.cs
New Unity Project (2)/Assets/Editor/Vuforia/CylinderTargetTextures/VuforiaMars_Images/Materials/: RocketBooster.Top_scaled.mat
New Unity Project (2)/Assets/Editor/Vuforia/ImageTargetTextures/open/Materials/: fgfg_scaled.mat
New Unity Project (2)/Assets/LowPoly_Magmadar/Animator/: Animator.controller
New Unity Project (2)/Assets/RainEntertainment/FantasyMonster4/Chaos Knight Warrior/Controller/: Chaos Knight Warrior.controller
New Unity Project (2)/Assets/Resources/: VuforiaConfiguration.asset
New Unity Project (2)/Assets/Scenes/: SampleScene.unity
New Unity Project (2)/Assets/StreamingAssets/Vuforia/: open.xml
New Unity Project (2)/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
New Unity Project (2)/QCAR/: somedata16
